# C-Matplotlib

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
